<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Registro"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/informacion_personal"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <EditText
        android:id="@+id/editTextTextNombre"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:hint="@string/edad"
        android:inputType="number"
        android:textSize="15sp"
        android:textStyle="normal" />


    <EditText
        android:id="@+id/editTextTextPeso"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextTextAltura_talla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:hint="@string/altura_talla"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="225dp"
        android:layout_height="86dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="153dp"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="54dp"
            app:srcCompat="@drawable/imc" />
    </RelativeLayout>


    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/btn_registrar"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_VerEstadistica"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorPrimary"
        android:text="Ver Estadistica"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>