<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Inicio"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="302dp"
        android:layout_height="183dp"
        app:srcCompat="@drawable/imageninicio" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:background="#492624"
        android:backgroundTint="?colorPrimaryDark"
        android:text="@string/registro_1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_red_light"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/btnEstadistica"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="15dp"
        android:background="#E91E63"
        android:backgroundTint="?colorPrimary"
        android:text="@string/estadisticas_1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:background="#CDDC39"
        android:backgroundTint="?colorPrimary"
        android:text="@string/ayuda_1"
        android:textColor="#757575"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#751D1D" />

</LinearLayout>