<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estadistica"
    android:orientation="vertical"
    android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="40dp"
                android:text="@string/titulo_estadistica"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="325dp"
                android:layout_height="58dp">

                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">

                    <TextView
                        android:id="@+id/mensaje_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="mensaje" />
                    </LinearLayout>
            </ScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="40dp"
                android:text="@string/Detalle_Resumen"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Anorexia"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:gravity="center"
                    android:text="@string/Anorexia" />

                <TextView
                    android:id="@+id/textanorexia"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:text=" " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Delgadez"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:text="@string/Delgadez" />

                <TextView
                    android:id="@+id/textDelgadez"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:text=" " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/normal" />

                <TextView
                    android:id="@+id/textnormal"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:text=" " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sobrepeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/obesidad1" />

            <TextView
                android:id="@+id/textObesidad1"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:text=" " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/obesidad2"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/obesidad2" />

            <TextView
                android:id="@+id/textobesidad2"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text=" " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/obesidad3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/obesidad3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/obesidadMorbida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/obesidad_Morbida" />

            <TextView
                android:id="@+id/textobesidadMorbida"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text=" " />
        </LinearLayout>

        <TextView
            android:id="@+id/textobesidad3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" " />

        <Button
            android:id="@+id/btnAtras1"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:backgroundTint="?colorPrimary"
            android:text="@string/btn_atras"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>