<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ayuda"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="40dp"
            android:text="@string/ayuda_Principal"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="195dp"
            android:layout_marginBottom="40dp"
            android:text="@string/Titulo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="114dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="72dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:srcCompat="@drawable/descarga" />

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="233dp"
            android:layout_marginBottom="20dp"
            android:text="@string/informacion"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/btn_atras"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>