<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatoPersonal"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="184dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/resutado_titulo"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="56dp"
            app:srcCompat="@drawable/logo" />


        <TextView
            android:layout_width="392dp"
            android:layout_height="280dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="20dp"
            android:text="@string/resultado"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/btn_aceptar"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>